--- a/CódigoFuente/BitacorasProduccion/packages.config
+++ b/CódigoFuente/BitacorasProduccion/packages.config
@@ -2,10 +2,13 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="4.6.0" targetFramework="net472" />
-  <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net45" />
+  <package id="ClosedXML.Parser" version="2.0.0" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml.Framework" version="3.1.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net45" />
   <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net45" />
+  <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net472" />
   <package id="Foolproof" version="0.9.4518" targetFramework="net45" />
   <package id="itext7" version="7.2.2" targetFramework="net472" />
   <package id="itext7.commons" version="7.2.2" targetFramework="net472" />
@@ -28,6 +31,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages.es" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net472" />
@@ -52,12 +56,16 @@
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="QRCoder" version="1.5.1" targetFramework="net472" />
+  <package id="RBush.Signed" version="4.0.0" targetFramework="net472" />
   <package id="RequeraSapConnector.Native.x64" version="1.3.0" targetFramework="net472" />
   <package id="Respond" version="1.2.0" targetFramework="net472" />
-  <package id="SpreadsheetLight" version="3.4.9" targetFramework="net45" />
+  <package id="SixLabors.Fonts" version="1.0.0" targetFramework="net472" />
+  <package id="SpreadsheetLight" version="3.4.9" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="4.7.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
