--- a/CódigoFuente/ClientApp/package.json
+++ b/CódigoFuente/ClientApp/package.json
@@ -15,9 +15,12 @@
     "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
+    "chart.js": "^4.5.1",
+    "chartjs-plugin-annotation": "^3.1.0",
     "clsx": "^2.1.1",
     "material-react-table": "^3.2.1",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
